--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </p>
             </div>
             <div class="s2">
-                <img src="C:/Users/ibmuser/Desktop/SAMLI KUMARI PASWAN/photoo.jpg" height="710px" width="690px">
+                <img src="photoo.jpg" height="710px" width="690px">
             </div>
             <div class="s5">
             </div>
