--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="s6">    
             </div>
             <div class="s7">
-                <img src="C:/Users/ibmuser/Desktop/SAMLI KUMARI PASWAN/dot.jpg" height="110px" width="320px">
+                <img src="dot.jpg" height="110px" width="320px">
             </div>
             <div class="s8">
                 <h1>The Algarve, Portugal</h1>
@@ -39,27 +39,27 @@
                 </nav>
             </div>
             <div class="s10">
-                <img src="C:/Users/ibmuser/Desktop/SAMLI KUMARI PASWAN/ssssss.jpg" height="590px" width="330px">
+                <img src="ssssss.jpg" height="590px" width="330px">
                 <h2>01</h2>
                 <p>Sed ut perspiciatis unde omnis iste<br>natus error sit voluptatem accusantium<br>doloremque laudantium, totam</p>
             </div>
             <div class="s11">
-                <img src="C:/Users/ibmuser/Desktop/SAMLI KUMARI PASWAN/ssk.jpg" height="260px" width="250px">
+                <img src="ssk.jpg" height="260px" width="250px">
                 <h2>02</h2>
                 <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit<br>nullam nunc justo sagittis</p>
             </div>
             <div class="s12">
-                <img src="C:/Users/ibmuser/Desktop/SAMLI KUMARI PASWAN/un.jpg" height="260px" width="250px">
+                <img src="un.jpg" height="260px" width="250px">
                 <h2>03</h2>
                 <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit<br>nullam nunc justo sagittis</p>
             </div>
             <div class="s13">
-                <img src="C:/Users/ibmuser/Desktop/SAMLI KUMARI PASWAN/xc.jpg" height="260px" width="250px">
+                <img src="xc.jpg" height="260px" width="250px">
                 <h2>04</h2>
                 <p>Lorem ipsum dolor sit amet<br>, consectetur adipiscing elit<br>nullam nunc justo sagittis</p>
             </div>
             <div class="s14">
-            <img src="C:/Users/ibmuser/Desktop/SAMLI KUMARI PASWAN/london.jpg" height="500px" width="900px">
+            <img src="london.jpg" height="500px" width="900px">
         </div>
         <div class="s15">
             <h1>Stonehenge,<br>Glastonbury, Bath &<br>the South West Coast</h1>
@@ -79,10 +79,10 @@
         <div class="s19">
             </div>
             <div class="s20">
-                <img src="C:/Users/ibmuser/Desktop/SAMLI KUMARI PASWAN/cc.jpg" height="670px" width="510px">
+                <img src="cc.jpg" height="670px" width="510px">
             </div>
             <div class="s21">
-                <img src="C:/Users/ibmuser/Desktop/SAMLI KUMARI PASWAN/dot.jpg" height="110" width="320">
+                <img src="dot.jpg" height="110" width="320">
             </div>
             <div class="s22">
                 <h1>Top Places in Germany</h1>
@@ -95,10 +95,10 @@
                 </nav>
             </div>
            <div class="s23">
-            <img src="C:/Users/ibmuser/Desktop/SAMLI KUMARI PASWAN/dd.jpg" height="250px" width="250px">
+            <img src="dd.jpg" height="250px" width="250px">
            </div> 
            <div class="s24">
-           <img src="C:/Users/ibmuser/Desktop/SAMLI KUMARI PASWAN/dot.jpg" height="72px" width="200px">
+           <img src="dot.jpg" height="72px" width="200px">
            </div>
            <div class="s25">
             <h1>Best time to visit Europe</h1>
@@ -112,10 +112,10 @@
             </nav>
            </div>
            <div class="s26">
-            <img src="C:/Users/ibmuser/Desktop/SAMLI KUMARI PASWAN/ee.jpg" height="425px" width="310px">
+            <img src="ee.jpg" height="425px" width="310px">
            </div>
            <div class="s27">
-            <img src="C:/Users/ibmuser/Desktop/SAMLI KUMARI PASWAN/nn.jpg" height="425px" width="310px">
+            <img src="nn.jpg" height="425px" width="310px">
            </div>
            <div class="s28">
             </div>
