--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
            <div class="s31">
              </div>
              <div class="s32">
-                <a href="#">Websites template</a>Created with<a href="#">Website Builder Sowftware</a>
+                <a href="#">Websites template</a>Created with<a href="#">Samli</a>
              </div>
         </body>
 </html>
